slight correction to alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ img{
 }
 #stxt,#snum{
     margin: 20px;
+    margin-left: 10px;
     width: 300px;
     background-color: lightskyblue;
     color: white;
